# AuctionMania

./: Cargo.toml  README.md
my-nft/: Cargo.toml  README.md
my-nft/src/: contract.rs  lib.rs  service.rs  state.rs
plinko-frontend/: package.json
web-ui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
web-ui/public/: About.jpg:Zone.Identifier  landing.jpg:Zone.Identifier  landing.png:Zone.Identifier
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/ui/: input.tsx  tabs.tsx  toast.tsx
web-ui/src/pages/: AuctionPage.tsx  Landing.tsx  Login.tsx  MintPage.tsx  SelectionPage.tsx
