[workspace]
members = ["my-nft"]
resolver = "1"

exclude = ["web-ui"]

[workspace.dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.3"
linera-views = "0.11.3"
base64 = "0.22.0"
bcs = "0.1.6"
sha3 = "0.10.8"
futures = "0.3.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.77"
thiserror = "1.0.57"

my-nft = { path = "./my-nft" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
