[package]
name = "my-nft"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
async-trait = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
linera-sdk = { workspace = true }
linera-views = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test", "wasmer"] }
linera-service = { version = "0.11.3", features = ["test"] }
my-nft = { workspace = true, features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "my_nft_contract"
path = "src/contract.rs"

[[bin]]
name = "my_nft_service"
path = "src/service.rs"

[features]
test = []
